[package]
name = "manga"
version = "0.1.0"
authors = ["yukihane <yukihane.feather@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.10.6", features = ["blocking"] }
select = "0.5.0"
